@@ -1,3 +1,13 @@
+2007-02-02  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/Wish-Info.plist.in:	add CFBundleLocalizations key, listing
+	* unix/configure.in (Darwin): 	all library/msgs locales.
+
+	* unix/configure.in (Darwin):	correct Info.plist year substitution in
+					non-framework builds.
+
+	* unix/configure:		autoconf-2.13
+
 2008-02-01  Reinhard Max  <max@suse.de>
 
 	* generic/tkImgGIF.c: Fixed a buffer overflow (CVE-2006-4484).
